fix: include padding in overflow

--- a/packages/core/src/components/card-content/card-content.scss
+++ b/packages/core/src/components/card-content/card-content.scss
@@ -16,6 +16,6 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
-  padding: 1rem;
   height: 100%;
+  overflow: hidden;
 }
