--- a/packages/core/src/components/card/card.scss
+++ b/packages/core/src/components/card/card.scss
@@ -36,6 +36,13 @@
     overflow: hidden;
   }
 
+  .card-content-wrapper {
+    padding: 1rem;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
   .card-footer {
     display: flex;
     position: relative;
